--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -1,1 +1,15 @@
+# Charger-møte Bergen 2016-03-15
 
+## Elastic beanstalk:
+Linker for oppsett
+* https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
+* https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
+
+## Cloudformation - Kinesis
+
+###Linker for oppsett tilpasset møtet
+Før du starter opp stacken så noter ned *vpc-id* og *subnet-id* for hvor du vil ha servere plassert.  
+* Template https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/kinesis-trippelservers-v2.template
+* Java-program https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
+
+Basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
