--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -1,7 +1,35 @@
 # Charger-møte Bergen 2016-03-15
 
-## Elastic beanstalk:
-Linker for oppsett
+## (1) Elastic beanstalk:
+### Oppgave
+* I consolet - stå i eu-west-1
+* Start en Beanstalk-stack vha. Create New Application oppe i høyre hjørne
+  * Velg *webserver environment*
+  * Velg *PHP* og *Load balancing*
+  * Kopier inn S3-url: https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
+  * Velg *environment name* og *URL*
+  * Velg: *Create environment inside VPC*
+  * Velg: *Instans-type* t2.micro, sett *connection draining* til 5 sec
+  * Valgfritt - legg inn tag
+  * Kryss av alle for *ELB* og *EC2*
+  * Fortsett til *Launch*
+
+### Ting å sjekke og se på
+* Se at applikasjonen virker ved å åpne URL, eventuelt åpne port 80 i security-grpup (menyvalg EC2)
+* Gå til *EC2* i consolet: se på servere, volumes, loadbalancer, autoscaling
+* Gå tilbake til applikasjonen i consolet
+  * Under *load balancing* endre *health check interval* til 6 sekunder, *healthy count* og *unhelathy count* til 2. Og vent på oppdateringen blir ferdig
+  * Under *scaling* sett *minimum* 3 og *maximum* 6 og *scaling cooldown* til 30
+* Se på hvordan EC2 og loadbalancer legger inn nye servere
+* Terminer en av EC2-instansene og se hva som skjer (se på loadbalancer, serverlist, at applikasjonen virker)
+* Deploy versjon 2 av applikasjonen https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
+  * Velg *Upload and deploy*
+  * Sjekk at applikasjonen virker, se evt. på hvordan loadbalancer jobber
+* Lek evt. mer med å bytte applikasjonsversjoner, se på scaling-parametre m.v.
+* Når ferdig gå på *Beanstalk*-forsiden og velg *delete application*
+  
+
+###Linker til applikasjon for oppsett
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
 
