--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -25,7 +25,7 @@
 * Deploy versjon 2 av applikasjonen https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
   * Velg *Upload and deploy*
   * Sjekk at applikasjonen virker, se evt. på hvordan loadbalancer jobber
-* Lek evt. mer med å bytte applikasjonsversjoner, se på scaling-parametre m.v.
+* Lek evt. mer med å bytte applikasjonsversjoner, se på scaling-parametre, bytt servertype fra t2.micro til t2.nano m.v.
 * Når ferdig gå på *Beanstalk*-forsiden og velg *delete application*
   
 
