--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -26,10 +26,11 @@
   * Velg *Upload and deploy*
   * Sjekk at applikasjonen virker, se evt. på hvordan loadbalancer jobber
 * Lek evt. mer med å bytte applikasjonsversjoner, se på scaling-parametre, bytt servertype fra t2.micro til t2.nano m.v.
+
+### Opprydding
 * Når ferdig gå på *Beanstalk*-forsiden og velg *delete application*
   
-
-###Linker til applikasjon for oppsett
+###Linker til applikasjon for nedlasting
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
 
