--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -14,7 +14,7 @@
   * Kryss av alle for *ELB* og *EC2*
   * Fortsett til *Launch*
 
-### Ting å sjekke og se på
+### Ting å leke med og se på
 * Se at applikasjonen virker ved å åpne URL, eventuelt åpne port 80 i security-grpup (menyvalg EC2)
 * Gå til *EC2* i consolet: se på servere, volumes, loadbalancer, autoscaling
 * Gå tilbake til applikasjonen i consolet
@@ -26,6 +26,7 @@
   * Velg *Upload and deploy*
   * Sjekk at applikasjonen virker, se evt. på hvordan loadbalancer jobber
 * Lek evt. mer med å bytte applikasjonsversjoner, se på scaling-parametre, bytt servertype fra t2.micro til t2.nano m.v.
+* For de avanserte: se på scaling-policy og skriv eks. en applikasjon som trekker mye CPU
 
 ### Opprydding
 * Når ferdig gå på *Beanstalk*-forsiden og velg *delete application*
@@ -34,11 +35,32 @@
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
 
-## Cloudformation - Kinesis
+## (2) Cloudformation - Kinesis
+
+### Oppgave
+* Før du starter opp stacken gå til *VPC* i consolet og noter ned *vpc-id* og *subnet-id* for hvor du vil ha servere plassert.  
+* Gå til *CLoudformation*
+ * Velg *Create new stack* 
+ * Start fra S3-URL https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/kinesis-trippelservers-v2.template
+ * Legg inn *subnetId* og *VPCid*
+ * Kjør gjennom wizarden
+ * Se på fanene i konsolet for hva som skjer
+* Når stacken er ferdig, se under "output" for URL til webapplikasjonen
+ 
+### Ting å leke med og se på
+* Se på ressurene som er opprettet, EC2, Kinesis, DynamoDB
+* Gå til *EC2*
+ * Velg instansen *Producer* og *Launce more like this* og *Launch*
+* For de avanserte: Javakoden for producer og consumer er tilgjengelig her https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
+
+### Opprydding
+* Cloudformation* delete stack
+* Terminer eventuelle ekstra EC2-servere du startet
 
 ###Linker for oppsett tilpasset møtet
-Før du starter opp stacken så noter ned *vpc-id* og *subnet-id* for hvor du vil ha servere plassert.  
 * Template https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/kinesis-trippelservers-v2.template
 * Java-program https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
 
-Basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
+Oppgaven er basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
+
+
