--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -37,6 +37,8 @@
 
 ## (2) Cloudformation - Kinesis
 
+Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-server kjører 10 tråder som hver skriver tilfeldig referanse (1 av 6) hvert 100 ms tilfeldig (100/sec). Consumer leser stream hvert 1000 ms og skriver til databasen, da telles det opp antall referanser fra streamen for siste 10.000ms. 
+
 ### Oppgave
 * Før du starter opp stacken gå til *VPC* i consolet og noter ned *vpc-id* og *subnet-id* for hvor du vil ha servere plassert.  
 * Gå til *CLoudformation*
@@ -57,10 +59,9 @@
 * Cloudformation* delete stack
 * Terminer eventuelle ekstra EC2-servere du startet
 
-###Linker for oppsett tilpasset møtet
+### Ressurser
 * Template https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/kinesis-trippelservers-v2.template
 * Java-program https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
-
-Oppgaven er basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
+* Oppgaven er basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
 
 
