--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -56,7 +56,7 @@ Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-s
 * For de avanserte: Javakoden for producer og consumer er tilgjengelig her https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
 
 ### Opprydding
-* Cloudformation* delete stack
+* *Cloudformation* og *delete stack*
 * Terminer eventuelle ekstra EC2-servere du startet
 
 ### Ressurser
