--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -50,7 +50,7 @@ Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-s
 * Når stacken er ferdig, se under "output" for URL til webapplikasjonen
  
 ### Ting å leke med og se på
-* Se på ressurene som er opprettet, EC2, Kinesis, DynamoDB
+* Se på ressurene som er opprettet, EC2, Kinesis, DynamoDB, rolle/policy
 * Gå til *EC2*
  * Velg instansen *Producer* og *Launce more like this* og *Launch*
 * For de avanserte: Javakoden for producer og consumer er tilgjengelig her https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
