--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -1,6 +1,17 @@
 # Charger-møte Bergen 2016-03-15
 
-## (1) Elastic beanstalk:
+##(1) S3 as webserver
+
+### Oppgave
+* Lag en S3-bucket
+* Lag en vilkårlig html-fil og last den opp i bucketen
+* Forsøk å vise filen
+* Sett policy på bucketen så alle filer kan leses av alle (NB! Bucketnavn og path må endres i eksempel-policy)
+S3-policy: [s3-bucket.policy](https://github.com/abjoerne/aws-tutorials/blob/master/s3-bucket.policy)
+###Cleanup notes
+* Remove bucket
+
+## (2) Elastic beanstalk:
 ### Oppgave
 * I consolet - stå i eu-west-1
 * Start en Beanstalk-stack vha. Create New Application oppe i høyre hjørne
@@ -35,7 +46,7 @@
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS.zip
 * https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/HelloAWS2.zip
 
-## (2) Cloudformation - Kinesis
+## (3) Cloudformation - Kinesis
 
 Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-server kjører 10 tråder som hver skriver tilfeldig referanse (1 av 6) hvert 100 ms tilfeldig (100/sec). Consumer leser stream hvert 1000 ms og skriver til databasen, da telles det opp antall referanser fra streamen for siste 10.000ms. 
 
