--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -8,7 +8,8 @@
 * Forsøk å vise filen
 * Sett policy på bucketen så alle filer kan leses av alle (NB! Bucketnavn og path må endres i eksempel-policy)
 S3-policy: [s3-bucket.policy](https://github.com/abjoerne/aws-tutorials/blob/master/s3-bucket.policy)
-### Cleanup notes
+
+### Opprydding
 * Remove bucket
 
 ## (2) Elastic beanstalk:
@@ -75,4 +76,8 @@ Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-s
 * Java-program https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
 * Oppgaven er basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
 
+## (4) Lambda, Kinesis, S3, DynamoDB
 
+Reference architecture for IoT backend using DynamoDB, Kinesis and Lambda (no EC2s). EMR and Redshift in the diagram is not part of the tutorial. https://github.com/awslabs/lambda-refarch-iotbackend
+
+NOTE! Read the cleanup-guide when cleaning up
