--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -76,7 +76,33 @@ Tre servere (EC2), en datastream (Kinesis) og en database (DynamoDB). Producer-s
 * Java-program https://s3-eu-west-1.amazonaws.com/anders-aws-bucket/awsdemo/amazon-kinesis-data-visualization-sample-1.1.2-assembly.zip
 * Oppgaven er basert på Amazon Kinesis Data Visualization Sample Application, for nedlasting av javakode m.v. gå til https://github.com/awslabs/amazon-kinesis-data-visualization-sample
 
-## (4) Lambda, Kinesis, S3, DynamoDB
+
+## (4) S3, SNS and Lambda with Cloudformation
+Based on https://github.com/awslabs/lambda-refarch-fileprocessing and https://aws.amazon.com/blogs/compute/fanout-s3-event-notifications-to-multiple-endpoints/
+
+### Task
+* Set up the stack (must be in US-EAST-1)
+* Add a subscription to SNS so you get a notification via email (there are two options, check out both)
+* Check out in console
+  * Cloudformation: output, resources, events...
+  * S3: Events in input-bucket
+  * Lambda: config etc.
+  * Cloudwatch: check under "Logs"
+  * IAM. Look at lambda-role's policy document (what does it do?) 
+* What else can you use this architecture for?
+
+
+### File references
+* Reference architecture: https://s3.amazonaws.com/awslambda-reference-architectures/file-processing/lambda-refarch-fileprocessing.pdf
+* Template-file can be seen here: https://s3.amazonaws.com/awslambda-reference-architectures/file-processing/lambda_file_processing.template
+* Lambda 1: https://s3.amazonaws.com/awslambda-reference-architectures/file-processing/data-processor-1.zip
+* Lambda 2: https://s3.amazonaws.com/awslambda-reference-architectures/file-processing/data-processor-2.zip
+
+### Cleanup notes 
+Empty buckets, remove SNS-subscriptions, remove log-groups, delete stack
+
+
+## (5) Lambda, Kinesis, S3, DynamoDB
 
 Reference architecture for IoT backend using DynamoDB, Kinesis and Lambda (no EC2s). EMR and Redshift in the diagram is not part of the tutorial. https://github.com/awslabs/lambda-refarch-iotbackend
 
