--- a/20160315-Bergen.md
+++ b/20160315-Bergen.md
@@ -1,5 +1,7 @@
 # Charger-møte Bergen 2016-03-15
 
+Deler av presentasjonen finner her: https://drive.google.com/open?id=0B4713MtBeu8YQWpvSGVOckxDTE0
+
 ##(1) S3 as webserver
 
 ### Oppgave
